# github-repo-configurator

./: README.md  pyproject.toml  setup.cfg  shell.nix
grc/: __main__.py
