# LocalStack project configuration
[build-system]
requires = ['setuptools', 'wheel']
build-backend = "setuptools.build_meta"

[tool.black]
line_length = 100

[tool.isort]
profile = 'black'
line_length = 100

# call using pflake8
[tool.flake8]
max-line-length = 110
ignore = 'E203,E266,E501,W503,F403'
select = 'B,C,E,F,I,W,T4,B9'
exclude = 'node_modules,.venv*,venv*,dist,build,target,*.egg-info,fixes,'

[tool.coverage.run]
relative_files = true
source = [
    "grc/"
]
dynamic_context = "test_function"

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "raise NotImplemented.",
    "return NotImplemented",
    "def __repr__",
]
