[metadata]
name = github-repo-configurator
description = Configure GitHub repositories
url = https://github.com/simonrw/github-repo-configurator
version = attr: grc.__version__
author = Simon Walker
author_email = s.r.walker101@gmail.com
license = Apache License 2.0
# classifiers =
#     Programming Language :: Python :: 3.10
#     License :: OSI Approved :: Apache Software License
#     Topic :: Internet
#     Topic :: Software Development :: Testing
#     Topic :: System :: Emulators

[options]
test_suite = tests
packages=find:

# dependencies that are required for the cli (via pip install localstack)
install_requires =
    PyGithub>=1.59.0

[options.extras_require]
dev =
    # testing
    pytest
    vcrpy
    # repl
    ipython
